--- a/newserver/views/landingPage.ejs
+++ b/newserver/views/landingPage.ejs
@@ -33,7 +33,7 @@
 <body>
     <div class="container">
         <h1>Welcome to maindb</h1>
-        <p>Your backend is looking nice!</p>
+        <p>This backend is looking nice!</p>
     </div>
 </body>
 </html>
