--- a/newserver/views/landingPage.ejs
+++ b/newserver/views/landingPage.ejs
@@ -34,6 +34,8 @@
     <div class="container">
         <h1>Welcome to maindb</h1>
         <p>This backend is looking nice!</p>
+        <p>Node.js, Express, MySQL, Sequelize, Bcrypt, JWT, Axios, Custom APIs and Middleware
+            Hosted on Azure with CI/CD pipeline</p>
     </div>
 </body>
 </html>
